[gd_scene load_steps=3 format=3 uid="uid://game_scene"]

[ext_resource type="Script" path="res://scripts/game/game_scene.gd" id="1_game"]
[ext_resource type="PackedScene" path="res://scenes/ui/pause_menu.tscn" id="2_pause"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_game")

[node name="BaseBackground" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.12, 0.12, 0.14, 1)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture_filter = 1

[node name="GameBoard" type="Node2D" parent="."]
position = Vector2(40, 96)

[node name="GridOverlay" type="Node2D" parent="GameBoard"]

[node name="FurnaceEntry" type="Node2D" parent="GameBoard"]
position = Vector2(208, 0)

[node name="FurnaceSprite" type="ColorRect" parent="GameBoard/FurnaceEntry"]
offset_left = -16.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = 0.0
color = Color(0.9, 0.4, 0.1, 1)

[node name="Enemies" type="Node2D" parent="GameBoard"]

[node name="Runes" type="Node2D" parent="GameBoard"]

[node name="Fireball" type="Node2D" parent="GameBoard"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="BottomBar" type="PanelContainer" parent="UILayer"]
offset_left = 40.0
offset_top = 324.0
offset_right = 456.0
offset_bottom = 352.0

[node name="BottomLabel" type="Label" parent="UILayer/BottomBar"]
layout_mode = 2
text = "UI - Buttons"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPanel" type="PanelContainer" parent="UILayer"]
offset_left = 496.0
offset_top = 8.0
offset_right = 640.0
offset_bottom = 352.0

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatsContainer" type="VBoxContainer" parent="UILayer/RightPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="LevelRow" type="HBoxContainer" parent="UILayer/RightPanel/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/StatsContainer/LevelRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "LEVEL"

[node name="LevelValue" type="Label" parent="UILayer/RightPanel/VBoxContainer/StatsContainer/LevelRow"]
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="MoneyRow" type="HBoxContainer" parent="UILayer/RightPanel/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/StatsContainer/MoneyRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "MONEY"

[node name="MoneyValue" type="Label" parent="UILayer/RightPanel/VBoxContainer/StatsContainer/MoneyRow"]
layout_mode = 2
text = "20"
horizontal_alignment = 2

[node name="HeatRow" type="HBoxContainer" parent="UILayer/RightPanel/VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="HeatLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/StatsContainer/HeatRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "HEAT"

[node name="HeatValue" type="Label" parent="UILayer/RightPanel/VBoxContainer/StatsContainer/HeatRow"]
layout_mode = 2
text = "3"
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="UILayer/RightPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "START"

[node name="BuildHeader" type="ColorRect" parent="UILayer/RightPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
color = Color(0.9, 0.75, 0.1, 1)

[node name="BuildLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/BuildHeader"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
text = "Build"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuildGrid" type="GridContainer" parent="UILayer/RightPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="Rune1" type="VBoxContainer" parent="UILayer/RightPanel/VBoxContainer/BuildGrid"]
layout_mode = 2

[node name="RuneButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune1"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2

[node name="RuneLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune1"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "REDIRECT"
horizontal_alignment = 1

[node name="InfoButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune1"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Info"

[node name="Rune2" type="VBoxContainer" parent="UILayer/RightPanel/VBoxContainer/BuildGrid"]
layout_mode = 2

[node name="RuneButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune2"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2

[node name="RuneLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune2"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "PORTAL"
horizontal_alignment = 1

[node name="InfoButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune2"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Info"

[node name="Rune3" type="VBoxContainer" parent="UILayer/RightPanel/VBoxContainer/BuildGrid"]
layout_mode = 2

[node name="RuneButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune3"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2

[node name="RuneLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune3"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "REFLECT"
horizontal_alignment = 1

[node name="InfoButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune3"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Info"

[node name="Rune4" type="VBoxContainer" parent="UILayer/RightPanel/VBoxContainer/BuildGrid"]
layout_mode = 2

[node name="RuneButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune4"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2

[node name="RuneLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune4"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "EXPLOSIVE"
horizontal_alignment = 1

[node name="InfoButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune4"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Info"

[node name="Rune5" type="VBoxContainer" parent="UILayer/RightPanel/VBoxContainer/BuildGrid"]
layout_mode = 2

[node name="RuneButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune5"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2

[node name="RuneLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune5"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "ACCEL"
horizontal_alignment = 1

[node name="InfoButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune5"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Info"

[node name="Rune6" type="VBoxContainer" parent="UILayer/RightPanel/VBoxContainer/BuildGrid"]
layout_mode = 2

[node name="RuneButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune6"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2

[node name="RuneLabel" type="Label" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune6"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "WALL"
horizontal_alignment = 1

[node name="InfoButton" type="Button" parent="UILayer/RightPanel/VBoxContainer/BuildGrid/Rune6"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Info"

[node name="ActiveUI" type="Control" parent="UILayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 40.0

[node name="WaveLabel" type="Label" parent="UILayer/ActiveUI"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 20.0
text = "Wave in Progress..."

[node name="PauseMenu" parent="." instance=ExtResource("2_pause")]
visible = false
